Finish control panel design and functionality. Add collapse/expand on click.

--- a/events/templates/events/detail/header/control_panel/show_hide.html
+++ b/events/templates/events/detail/header/control_panel/show_hide.html
@@ -1,4 +1,4 @@
-<div class='col'>
+<div class='col col-4'>
   <div class='control-panel-section'>Show / Hide Sections</div>
   <div class='pt-2'>
     <span class='control-panel-description'> Show and/or hide sections of the schedule to only display portions on which you're working.</span>
@@ -9,7 +9,7 @@
               
               <li class="list-group-item">
                 <div class='row'>
-                  <a class='col col-8' style='color: #5e6673;'>Scheduled Shifts:</a>
+                  <a class='col col-8' style='color: #5e6673;'>Scheduled:</a>
                   <button type="button" class="btn btn-toggle toggle-scheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
                     <div class="handle"></div>
                   </button>
@@ -17,24 +17,24 @@
               </li>
               <li class="list-group-item">
                 <div class='row'>
-                  <a class='col col-8' style='color: #5e6673;'>Scheduled Shifts:</a>
-                  <button type="button" class="btn btn-toggle toggle-scheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
+                  <a class='col col-8' style='color: #5e6673;'>Unscheduled:</a>
+                  <button type="button" class="btn btn-toggle toggle-unscheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
                     <div class="handle"></div>
                   </button>
                 </div>
               </li>
               <li class="list-group-item">
                 <div class='row'>
-                  <a class='col col-8' style='color: #5e6673;'>Scheduled Shifts:</a>
-                  <button type="button" class="btn btn-toggle toggle-scheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
+                  <a class='col col-8' style='color: #5e6673;'>Inactive Locations:</a>
+                  <button type="button" class="btn btn-toggle toggle-inactive-locations float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
                     <div class="handle"></div>
                   </button>
                 </div>
               </li>
               <li class="list-group-item">
                 <div class='row'>
-                  <a class='col col-8' style='color: #5e6673;'>Scheduled Shifts:</a>
-                  <button type="button" class="btn btn-toggle toggle-scheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
+                  <a class='col col-8' style='color: #5e6673;'>Bar Locations:</a>
+                  <button type="button" class="btn btn-toggle toggle-bars float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
                     <div class="handle"></div>
                   </button>
                 </div>
@@ -42,6 +42,7 @@
     
     </ul>
   </div>
+</div>
   
   
   
