--- a/events/templates/events/detail/header/control_panel/show_hide.html
+++ b/events/templates/events/detail/header/control_panel/show_hide.html
@@ -25,7 +25,7 @@
               </li>
               <li class="list-group-item">
                 <div class='row'>
-                  <a class='col col-8' style='color: #5e6673;'>Inactive Locations:</a>
+                  <a class='col col-8' style='color: #5e6673;'>Inactive Stands:</a>
                   <button type="button" class="btn btn-toggle toggle-inactive-locations float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
                     <div class="handle"></div>
                   </button>
@@ -33,7 +33,7 @@
               </li>
               <li class="list-group-item">
                 <div class='row'>
-                  <a class='col col-8' style='color: #5e6673;'>Bar Locations:</a>
+                  <a class='col col-8' style='color: #5e6673;'>Bar Stands:</a>
                   <button type="button" class="btn btn-toggle toggle-bars float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">
                     <div class="handle"></div>
                   </button>
@@ -43,51 +43,10 @@
     </ul>
   </div>
 </div>
-  
-  
-  
-  
-        <!--  <div class='card' style='background:white;'>-->
 
-        <!--    <ul class="list-group list-group-flush">-->
-              
-              
-        <!--      <li class="list-group-item">-->
-        <!--        <div class='row'>-->
-        <!--          <a class='col col-8'>Scheduled Shifts:</a>-->
-        <!--          <button type="button" class="btn btn-toggle toggle-scheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">-->
-        <!--            <div class="handle"></div>-->
-        <!--          </button>-->
-        <!--        </div>-->
-        <!--      </li>-->
-              
-        <!--      <li class="list-group-item">-->
-        <!--        <div class='row'>-->
-        <!--          <a class='col col-8'>Unscheduled Shifts:</a>-->
-        <!--          <button type="button" class="btn btn-toggle toggle-unscheduled active" data-toggle="button" aria-pressed="true" autocomplete="off">-->
-        <!--            <div class="handle"></div>-->
-        <!--          </button>-->
-        <!--        </div>-->
-        <!--      </li>-->
-              
-        <!--      <li class="list-group-item">-->
-        <!--        <div class='row'>-->
-        <!--          <a class='col col-8'>Inactive Locations:</a>-->
-        <!--          <button type="button" class="btn btn-toggle toggle-unscheduled" data-toggle="button" aria-pressed="false" autocomplete="off">-->
-        <!--            <div class="handle"></div>-->
-        <!--          </button>-->
-        <!--        </div>-->
-        <!--      </li>-->
-              
-        <!--      <li class="list-group-item">-->
-        <!--        <div class='row'>-->
-        <!--          <a class='col col-8'>Bar Locations:</a>-->
-        <!--          <button type="button" class="btn btn-toggle toggle-unscheduled" data-toggle="button" aria-pressed="false" autocomplete="off">-->
-        <!--            <div class="handle"></div>-->
-        <!--          </button>-->
-        <!--        </div>-->
-        <!--      </li>-->
-            
-        <!--    </ul>-->
-        <!--  </div>-->
-        <!--</div>-->
+
+
+<!--toggle colors:-->
+<!--empty for name and time - Red-->
+<!--updated and complete - Green-->
+<!--default from template-->
