--- a/events/templates/events/detail/header/control_panel/update_template.html
+++ b/events/templates/events/detail/header/control_panel/update_template.html
@@ -3,8 +3,7 @@
   <div class='pt-2'>
     
     <span class='control-panel-description'>
-      All changes made to the schedule will be replaced with template values. You can't undo this action.
-    </span>
+      All changes made to the schedule will be replaced with template values.
 
     <div class="input-group mt-3">
       <select class="custom-select" id="inputGroupSelect04">
