--- a/events/templates/events/detail/header/control_panel/update_roles.html
+++ b/events/templates/events/detail/header/control_panel/update_roles.html
@@ -10,12 +10,12 @@
 
         <li class="list-group-item" style='padding-top: 6px;padding-bottom: 6px;'>
           <div class='row'>
-            <a class='col col-4' style='color: #5e6673; padding-top: 7px;'>{{role}}:</a>
-            <div class='col col-6 pr-0'>
+            <a class='col pr-0' style='color: #5e6673; padding-top: 7px;flex: 0 0 37%;max-width: 37%;'>{{role}}:</a>
+            <div class='col px-0' style='flex: 0 0 46%;max-width: 46%;'>
               <input type="text" class="form-control" placeholder="e.g. 6:30PM" aria-label="Arrive" style="text-align: center;border:none;background: #EEE;">
             </div>
-            <div class='col-2' style='padding-left: 18px;'>
-              <a id='{{role|lower}}'><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height: 22px;margin-top: 7px;'/></a>
+            <div class='col-2'>
+              <a id='{{role|lower}}'><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height: 22px;margin-top: 7px;text-align: center;width: 100%;margin-left: 2px;' /></a>
             </div>
           </div>
         </li>
