--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -1,37 +1,21 @@
 {% load staticfiles %}
 <div class="container event-details">
-  <div class='col-12'>
+  <div class='col-12 py-4'>
     
     <button type="button" class="btn btn-dark float-right print"><span>Print</span></button>
     <button type="button" class="mx-2 btn-dark btn float-right"><span>Export</span></button>
     <button type="button" class="btn btn-dark float-right"><span>Email</span></button>
     
-    <a class='event-title' style='font-size:2em;'>{{event.title}}</a><br />
+    <div class='event-header-details'>
+    
+    <a class='event-title'>{{event.title}}</a><br />
     <a class='event-date' style='font-size:1.2em;'>{{event.date}}</a><br />
     <a class='event-doors' style='font-size:1.2em;'>Doors Open at {{event.doors_open}}</a>
+    
+    </div>
         
   </div>
 </div>
 
-<div class='container py-2' style='background:#99a0ab;'>
-  <a class='control-panel-header' data-toggle="collapse" href="#collapseCP" role="button">
-    <div class='text-center' style='font-size:.9em;color:white;letter-spacing:1px;font-family:"Open Sans"'>
-      <span>CONTROL  PANEL</span>
-      <img class='ml-1' src='{% static "events/img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
-    </div>
-  </a>
-</div>
 
-<div class='container control-panel pt-4 pb-1 collapse show' id='collapseCP'>
-  <div class='col-12'>
-    <div class='row'>
-       
-      {% include './control_panel/update_template.html' %}
-      {% include './control_panel/update_roles.html' %}
-      {% include './control_panel/show_hide.html' %}
-
-    </div>
-  </div>
-  <hr style='border-top: 1px solid rgba(153, 160, 171, 0.5);' />
-</div>
 
