--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 
-<div class="card mx-auto shadow inactive-locations" class='testing'>
-  <div class="card-header location-header">
+<div class="card" class='testing' style='width:100%;'>
+  <div class="card-header location-header py-2">
       <label class='location-title' data-target='#{{location|slugify}}' data-toggle='collapse'>
-      <input class='active-location mr-3' type="checkbox" checked /><a style="vertical-align:middle;">{{location}}</a></label>
+      <input name='location-box' class='active-location mr-3 {{bar|yesno:"bar,"}}' type="checkbox" checked /><a style="vertical-align:middle;">{{location}}</a></label>
       {# <!--<a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>--> #}
       {# <!--<a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>--> #}
   </div>
@@ -13,17 +13,18 @@
     <div class='row {{scheduled.arrival_time|yesno:"scheduled,unscheduled"}}'>
       <div class="btn-group" style="width:100%;">
         <div class="input-group input-group">
-          <div class="col col-2 pr-0 input-group-prepend">
-            <div class="input-group-text" style="width:100%;">{{shift}}</div>
+          <div class="col pr-0 input-group-prepend" style='flex: 0 0 20%;max-width: 20%;'>
+            <div class="input-group-text text-center" style='width:100%;'><span style='width:100%'>{{shift}}</span>
+            </div>
           </div>
-          <select class="col col-6 form-control form-control">
+          <select class="col form-control form-control" style='flex: 0 0 50%;max-width: 50%;'>
             <option value='{{shift}}' class='{{shift}}' selected>{{scheduled.employee|default:shift}}</option>
             {% for employee in all_employees %}
               <option class="{{employee}}">{{employee.name}}</option>
             {% endfor %}
           </select>
-          <div class="col col-4 pl-0 input-group-append input-group">
-            <input type="text" class="form-control {{shift.0}}" placeholder="Arrive" aria-label="Arrive" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
+          <div class="col px-0 input-group-append input-group" style='flex: 0 0 27%;max-width: 27%;'>
+            <input type="text" class="form-control {{shift.0}}" placeholder="Arrive" aria-label="Arrive" style="text-align:center;border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
           </div>
         </div>
       </div>
