Send schedule via AJAX on submit. Add event_id to dictionary. Install JSONField.

--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -8,7 +8,7 @@
     
     <div class='event-header-details'>
     
-    <a class='event-title'>{{event.title}}</a><br />
+    <a class='event-title' id='{{event.id}}'>{{event.title}}</a><br />
     <a class='event-date' style='font-size:1.2em;'>{{event.date}}</a><br />
     <a class='event-doors' style='font-size:1.2em;'>Doors Open at {{event.doors_open}}</a>
     
