--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -12,7 +12,7 @@
     <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
       <img class='ml-1' src='{% static "events/img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
     </a>
-    <div class='btn btn-dark float-right'>Save</div>
+    <div class='btn btn-dark float-right submit-schedule'>Save</div>
   </div>
   
   <hr/>
@@ -52,7 +52,7 @@
     <div class='col col-12'>
       <div class='card-columns mx-4'>
         {% for location, attributes in schedule.items %}
-          {% with position=attributes.positions bar=attributes.bar active=attributes.active %}
+          {% with position=attributes.positions bar=attributes.bar active=attributes.active location_id=attributes.pk %}
             {% include 'events/detail/location_card.html' %}
           {% endwith %}
         {% endfor %}
