--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -2,13 +2,13 @@
 
 <div class="card" class='testing' style='width:100%;'>
   <div class="card-header location-header py-2">
-      <label class='location-title' data-target='#{{location_id}}' data-toggle='collapse'>
+      <label class='location-title' data-target='#{{location}}' data-toggle='collapse'>
       <input name='location-box' class='active-location mr-3 {{bar|yesno:"bar,"}}' type="checkbox" checked /><a style="vertical-align:middle;">{{location}}</a></label>
       {# <!--<a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>--> #}
       {# <!--<a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>--> #}
   </div>
 
-  <div class="card-body location-body collapse {{position|yesno:'show,hide'}}" id="{{location_id}}" aria-expanded="true">
+  <div class="card-body location-body collapse {{position|yesno:'show,hide'}}" id="{{location}}" name='{{location}}' aria-expanded="true">
   {% for shift, scheduled in position.items %}
     <div class='row {{scheduled.arrival_time|yesno:"scheduled,unscheduled"}}'>
       <div class="btn-group" style="width:100%;">
