Collect schedule arrival times and save to event schedule

--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -24,7 +24,7 @@
             {% endfor %}
           </select>
           <div class="col px-0 input-group-append input-group" style='flex: 0 0 27%;max-width: 27%;'>
-            <input type="text" class="form-control {{shift.0}}" placeholder="Arrive" aria-label="Arrive" style="text-align:center;border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
+            <input type="text" class="form-control {{shift.0}}" placeholder="Arrive" aria-label="Arrive" value='{{scheduled.arrival_time}}' style="text-align:center;border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
           </div>
         </div>
       </div>
