--- a/events/templates/events/templates/create.html
+++ b/events/templates/events/templates/create.html
@@ -3,26 +3,28 @@
 {% block content %}  
 
 <div class='container px-0'>
-  {% include 'events/detail/header/event_header.html' with template=template %}
+  {% include 'events/detail/header/event_header.html' %}
   
   <div class='container' style='background:white;'>
-    <div class='col-12 py-3 control-panel-header'>
-      <span>SCHEDULE</span>
-      <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
-        <img class='ml-1' src='{% static "events/img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
-      </a>
-      <div class='btn btn-dark float-right submit-schedule'>Save</div>
-    </div>
+  
+  <div class='col-12 py-3 control-panel-header'>
+    <span>SCHEDULE</span>
+    <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
+      <img class='ml-1' src='{% static "events/img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
+    </a>
+    <div class='btn btn-dark float-right submit-schedule'>Save</div>
+  </div>
+  
   <hr/>
-
+  
   <div class='container px-0'>
     <div class='card collapse' id='collapseCP'>
       <div class=' mx-3 mb-4'  style='background: #e8ebf1;'>
         <div class='card-body'>
           <div class='row'>
-            {% include './header/control_panel/update_template.html' %}
-            {% include './header/control_panel/update_roles.html' %}
-            {% include './header/control_panel/show_hide.html' %}
+            {% include 'events/detail/header/control_panel/update_template.html' %}
+            {% include 'events/detail/header/control_panel/update_roles.html' %}
+            {% include 'events/detail/header/control_panel/show_hide.html' %}
           </div>
         </div>
       </div>
