--- a/static/events/css/style.css
+++ b/static/events/css/style.css
@@ -1,6 +1,6 @@
 body {
     /*background: url("/static/events/img/background.jpg") no-repeat fixed;*/
-    background: url("/static/events/img/blue1.jpg") no-repeat fixed;
+    /*background: url("/static/events/img/blue1.jpg") no-repeat fixed;*/
     /*background: linear-gradient(to top right, rgba(57,44,93,1), rgba(57,44,93,1),rgba(129,71,110,1),rgba(231,174,143,1))!important; */
     background:#DDD;
     background-position: bottom left;
@@ -653,13 +653,8 @@ button:focus {
   font-weight: 500;
   font-family: 'Source Sans Pro';
   letter-spacing: 1px;
-}
-
-.event-details {
-  font-family: Lato;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: #000;
 }
 
 .control-panel-header {
@@ -701,13 +696,6 @@ button:focus {
     height: 38px;
 }
 
-.event-details {
-  background:white;
-  padding-top:50px;
-  padding-bottom:50px;
-  font-family:"Source Sans Pro";
-}
-
 .control-panel {
   background:#e8ebf1;
 }
@@ -722,4 +710,32 @@ button:focus {
 
 .event-details {
   background-color: #e8ebf1;
+}
+
+.remove-button {
+  display:none;
+}
+
+.rotate {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+.remove-employee {
+  transition: transform 0.5s;
+}
+
+.red-border {
+  border: 1px solid red;
+}
+
+.red-border-background {
+  border: 1px solid red;
+  background: #f5f1f1;
+}
+
+.display-flex {
+  display:flex;
 }
