Generate initial template after user deselects inactive locations

--- a/events/templates/events/detail/header/event_header.html
+++ b/events/templates/events/detail/header/event_header.html
@@ -24,8 +24,10 @@
       
       
       <div class='event-header-details form-inline'>
-        <input class="form-control event-title" type="text" placeholder="Template Name" style='width:50%;'><br />
-        <button type="button" class="btn btn-dark btn-lg ml-2"><span>Update</span></button>
+        <input class="form-control template-name" type="text" placeholder="Template Name" style='width:50%;'><br />
+        <button type="button" class="btn btn-dark btn-lg ml-2"><span>Edit</span></button>
+        <button type="button" class="btn btn-dark btn-lg ml-2"><span>Save</span></button>
+        <button type="button" class="btn btn-dark btn-lg ml-2 d-none"><span>Update</span></button>
       </div>
           
     </div>
