--- a/events/templates/events/templates/create.html
+++ b/events/templates/events/templates/create.html
@@ -8,8 +8,8 @@
   <div class='container' style='background:white;'>
   
   <div class='col-12 py-3 control-panel-header'>
-    <span>SCHEDULE</span>
-    <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Control Panel]</span>
+    <span>TEMPLATE</span>
+    <a class='ml-2' data-toggle="collapse" href="#collapseCP" role="button" style='font-size:.6em; color:black;text-transform:uppercase;'><span>[Options]</span>
       <img class='ml-1' src='{% static "events/img/down-chevron.svg" %}' style='height:18px;margin-top:-2px;' alt="Plus Symbol" />
     </a>
     <div class='btn btn-dark float-right submit-schedule'>Save</div>
@@ -18,32 +18,33 @@
   <hr/>
   
   <div class='container px-0'>
-    <div class='card collapse' id='collapseCP'>
-      <div class=' mx-3 mb-4'  style='background: #e8ebf1;'>
-        <div class='card-body'>
-          <div class='row'>
-            {% include 'events/detail/header/control_panel/update_template.html' %}
-            {% include 'events/detail/header/control_panel/update_roles.html' %}
-            {% include 'events/detail/header/control_panel/show_hide.html' %}
-          </div>
+    <div class='card show' id='collapseCP'>
+      <div class='mx-3 mb-4'  style='background: #e8ebf1;'>
+        <div class='card-body' style='margin-left:30px;margin-right:30px;color:#5e6673;'>
+          
+            {% include 'events/detail/header/control_panel/template_cp.html' %}
+          
         </div>
       </div>
       <hr/>
     </div>
   </div>
-  
-  <div class='row mx-auto'>
-    <div class='col col-12'>
-      <div class='card-columns mx-4'>
-        {% for location, attributes in schedule.items %}
-          {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
-            {% include 'events/detail/location_card.html' %}
-          {% endwith %}
-        {% endfor %}
-      </div>
-      <hr />
-    </div>
+  <div class='template-schedule'>
+    
   </div>
+  
+  <!--<div class='row mx-auto' style='display:none;'>-->
+  <!--  <div class='col col-12'>-->
+  <!--    <div class='card-columns mx-4'>-->
+  <!--      {% for location, attributes in schedule.items %}-->
+  <!--        {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}-->
+  <!--          {% include 'events/detail/location_card.html' %}-->
+  <!--        {% endwith %}-->
+  <!--      {% endfor %}-->
+  <!--    </div>-->
+  <!--    <hr />-->
+  <!--  </div>-->
+  <!--</div>-->
   </div>
 </div>
 
