--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   
-  <div class='row mx-auto'>
+  <div class='row mx-auto schedule-cards'>
     <div class='col col-12'>
       <div class='card-columns mx-4'>
         {% for location, attributes in schedule.items %}
