Fix ability to save schedule and combine with template save view

--- a/templates/objects/list.html
+++ b/templates/objects/list.html
@@ -21,8 +21,11 @@
           </div>
           
 
-          
+          {% if app %}
+          {% include 'event_templates'|add:'/'|add:obj|add:'_list.html' %}
+          {% else %}
           {% include objs|add:'/'|add:obj|add:'_list.html' %}
+          {% endif %}
 
         </div>
       </div>
