--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -12,6 +12,7 @@
       <li class="nav-item"><a class="nav-link" href="/employees">Employees</a></li>
       <li class="nav-item"><a class="nav-link" href="/locations">Locations</a></li>
       <li class="nav-item"><a class="nav-link" href="/features/sms-text">SMS Text</a></li>
+      <li class="nav-item"><a class="nav-link" href="/schedules">Templates</a></li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
