--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -144,17 +144,17 @@ button.add-object {
     letter-spacing: 1px;
 }
 
-.modal-content {
-    background: linear-gradient(to top right, rgba(124,76,125,.7), rgba(170,101,118,.7),rgba(170,101,118,.7),rgba(231,174,143,.7))!important;
-    background: linear-gradient(to right,rgba(195, 127, 143, 0.7),rgba(136, 86, 125, 0.7));
-    color: white;
-}
-.modal-title {
-    font-weight: 300;
-    color: white!important;
-    text-transform:uppercase;
-    font-size:2em;
-}
+/*.modal-content {*/
+/*    background: linear-gradient(to top right, rgba(124,76,125,.7), rgba(170,101,118,.7),rgba(170,101,118,.7),rgba(231,174,143,.7))!important;*/
+/*    background: linear-gradient(to right,rgba(195, 127, 143, 0.7),rgba(136, 86, 125, 0.7));*/
+/*    color: white;*/
+/*}*/
+/*.modal-title {*/
+/*    font-weight: 300;*/
+/*    color: white!important;*/
+/*    text-transform:uppercase;*/
+/*    font-size:2em;*/
+/*}*/
 
 /*body.modal-open .background-container {*/
 /*    -webkit-filter: blur(4px);*/
