--- a/events/templates/events/detail/header/control_panel/update_template.html
+++ b/events/templates/events/detail/header/control_panel/update_template.html
@@ -21,13 +21,13 @@
         <select class="custom-select" id="template-subcategory" disabled>
           <option value="0" selected>Choose Category Above</option>
           <option value="1">Click 'Submit'</option>
-          <option value="2">See Past Events...</option>
-          <option value="2">See Future Events...</option>
+          <option value="2" id='previous-events'>See Past Events...</option>
+          <option value="2" id='future-events'>See Future Events...</option>
           <option value="3"></option>
-          <option value="3">See More...</option>
+          <option value="3" id='all-templates'>See More...</option>
         </select>
         <div class="input-group-append">
-          <button class="btn btn-dark update-template" type="button">Update</button>
+          <button class="btn btn-dark choose-template" data-toggle="modal" data-target="#exampleModal" type="button">Update</button>
         </div>
       </div>
     </fieldset>
@@ -40,6 +40,8 @@
 </div>
 
 
+
+
 <!--1. Reset to Last Save-->
 <!--      + Inactive Secondary-->
 <!--2. Populate w/Different Event-->
@@ -48,3 +50,26 @@
 <!--3. Reset to Blank Template-->
 <!--      + 5 Most Recent-->
 <!--      + See More-->
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Select a Template</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary update-template">Update Template</button>
+      </div>
+    </div>
+  </div>
+</div>
