Remove schedule-related models from event. Add ability to define employee roles under company profile.

--- a/company_profile/templates/company_profile/company_profile.html
+++ b/company_profile/templates/company_profile/company_profile.html
@@ -22,6 +22,9 @@
             Contact for Help/Feedback<br/>
         </div>
       </div>
+      <div class='row'>
+        {% include 'company_profile/employee_roles.html' %}
+      </div>
       <hr />
     </div>
   </div>
