--- a/templates/objects/form.html
+++ b/templates/objects/form.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 {% load widget_tweaks %}
 
 {% for field in form %}
@@ -9,3 +10,45 @@
     {% endfor %}
   </div>
 {% endfor %}
+{% if obj == 'location' %}
+  <div class='row'>
+    <span>Maximum Positions:</span>
+  </div>
+  <div class='row'>
+    <div class='col-6'>
+      <div class="btn-group-vertical">
+      {% for role in roles %}
+        <button type="button" class="btn btn-dark mb-2 add-role-button" id='{{role.short_name}}'>{{role.verbose_name}}</button>
+      {% endfor %}
+      </div>
+    </div>
+    <div class='col-6 role-list'>
+      {% for role in roles %}
+        <div class='{{role.short_name}}-container'>
+          
+        </div>
+      {% endfor %}
+      
+      
+    </div>
+  </div>
+  
+  
+  
+  <div class='d-none'>
+    <div class="form-row align-items-center">
+      <div class="col-auto">
+        <label class="sr-only" for="inlineFormInputGroup">Username</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <div class="input-group-text short-name">MG</div>
+          </div>
+          <div class="input-group-text verbose-name">Manager</div>
+          <a class='remove-sub-role'><img style='width:20px; height:20px;' src='{% static "events/img/minus.svg" %}' /> </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+{% endif %}
+
