--- a/locations/templates/locations/location_list_ajax.html
+++ b/locations/templates/locations/location_list_ajax.html
@@ -1,20 +1,20 @@
 {% load staticfiles %}
-  <tbody>
-  {% for location in locations %}
-    <tr>
-      <td>{{location.location_id}}</td>
-      <td>{{location.title}}</td>
-      <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
-      <td>0</td>
-      <td>
-        <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}">
-          <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
-        </button>
-        <button type="button" class="btn js-delete-object" data-url="{% url 'location_delete' location.id %}">
-          <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
-        </button>
-      </td>
+<tbody>
+{% for location in locations %}
+  <tr>
+    <td>{{location.location_id}}</td>
+    <td>{{location.title}}</td>
+    <td>{% include 'base/boolean.html' with bool=location.bar %}</td>
+    <td>{{location.positions_length}}</td>
+    <td>
+      <button type="button" class="btn js-update-object" data-url="{% url 'location_update' location.id %}">
+        <img class='icon-edit 'src='{% static "events/img/edit.svg" %}' alt="Edit Icon"/>
+      </button>
+      <button type="button" class="btn js-delete-object" data-url="{% url 'location_delete' location.id %}">
+        <img class='icon-delete 'src='{% static "events/img/delete.svg" %}' alt="Delete Icon"/>
+      </button>
+    </td>
 
-    </tr>
-  {% endfor %}
-  </tbody>
+  </tr>
+{% endfor %}
+</tbody>
