--- a/templates/objects/form.html
+++ b/templates/objects/form.html
@@ -43,7 +43,7 @@
   <div class='d-none'>
     <div class="form-row align-items-center default-position">
       <div class="col-auto">
-        <label class="sr-only" for="inlineFormInputGroup">Username</label>
+        <!--<label class="sr-only" for="inlineFormInputGroup">Username</label>-->
         <div class="input-group mb-2">
           <div class="input-group-prepend">
             <div class="input-group-text short-name"></div>
