Fix deprecations with creating v. updating position sets

--- a/locations/templates/locations/location_list.html
+++ b/locations/templates/locations/location_list.html
@@ -7,7 +7,7 @@
       <th onclick="sortTable(0)" scope="col"><a>ID</a></th>
       <th onclick="sortTable(1)" scope="col"><a>Name</a></th>
       <th onclick="sortTable(2)" scope="col"><a>Bar</a></th>
-      <th onclick="sortTable(3)" scope="col"><a>Default Positions</a></th>
+      <th onclick="sortTable(3)" scope="col"><a>Positions</a></th>
       <th scope="col">Edit</th>
     </tr>
   </thead>
