--- a/templates/objects/delete.html
+++ b/templates/objects/delete.html
@@ -3,13 +3,14 @@
 <form method="post" action="{% url obj|add:'_delete' object.id %}" class="js-object-delete-form">
   {% csrf_token %}
   <div class="modal-header">
+    <h4 class="modal-title">Confirm {{obj}} deletion</h4>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-    <h4 class="modal-title">Confirm {{obj}} deletion</h4>
   </div>
+  
   <div class="modal-body">
-    <p class="lead">Are you sure you want to delete the {{obj}} <strong>Hello</strong>?</p>
+    <p class="lead">Are you sure you want to delete this location?</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
